welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: illegal start of simple expression
      casi i if i>=81=>2
             ^caughtSpeeding:13: error: illegal start of simple expression
      casi i if (i>=86)=>2
             ^